<resources>
    <string name="app_name">Tip Counter App</string>
    <string name="et_cost_of_service">Cost of Service</string>
    <string name="tv_question_of_service">How was the service?</string>
    <string name="rb_option_amazing">Amazing (20%)</string>
    <string name="rb_option_good">Good (18%)</string>
    <string name="rb_option_ok">Ok (15%)</string>
    <string name="sw_round_tip">Round up tip?</string>
    <string name="btn_calculate">CALCULATE</string>
    <string name="tv_tip_amount">Tip Amount</string>
    <string name="content_description_image_service">image description of service</string>
</resources>